# CCEmu

./: .gitignore  CMakeLists.txt  README.md  config.json
include/: call.h  callcenter.h  cdrentry.h  client.h  operator.h  randomizer.h  server.h
src/: call.cpp  callcenter.cpp  client.cpp  main.cpp  operator.cpp  server.cpp
tests/: call_test.cpp  cctest.py  randomizer_test.cpp  requirments.txt
